# stream-sync

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.codex-logs/: wrapper-success-server.out  wrapper-success-switcher.out  wrapper-unknown-server.out  wrapper-unknown2-server.out  wrapper-unknown2-switcher.out
apps/client/: Cargo.toml
apps/client/src/: lib.rs  main.rs
apps/server/: Cargo.toml
apps/server/src/: lib.rs  main.rs
apps/switcher/: Cargo.toml
apps/switcher/src/: lib.rs  main.rs
configs/examples/: client.accepted.example.toml  client.example.toml  server.env-token.example.toml  server.example.toml  switcher.example.toml
configs/manual/: client.player1.toml  client.player2.toml  client.player3.toml  client.player4.toml  server.two-real-slots.toml
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/logging/: Cargo.toml
crates/logging/src/: lib.rs
crates/net-core/: Cargo.toml
crates/net-core/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/sync-core/: Cargo.toml
crates/sync-core/src/: lib.rs
crates/timebase/: Cargo.toml
crates/timebase/src/: lib.rs
crates/ui-core/: Cargo.toml
crates/ui-core/src/: lib.rs
crates/video-core/: Cargo.toml
crates/video-core/src/: lib.rs
docs/architecture/: decisions.md  protocol.md  system-design.md
docs/operations/: auth-roundtrip-manual-check.md  codex-task-template.md  concurrent-handoff-runtime-plan.md  continuous-decoded-lookup-plan.md  continuous-feed-drain-plan.md  continuous-one-shot-double-load-plan.md  continuous-output-availability-plan.md  continuous-output-lag-plan.md  continuous-output-pipeline-experiment-plan.md  continuous-output-throughput-plan.md  continuous-pixel-conversion-plan.md  continuous-stream-decoder-plan.md  direct-compose-plan.md  distributed-pc-validation.md  four-client-validation.md  manual-placeholder-video-poc.md  manual-real-encoded-video-poc.md  obs-capture-validation.md  persistent-decoder-plan.md  session-log.md  todo.md  two-client-handoff-validation.md  two-client-long-run-validation.md  two-client-long-run-validation.ps1
docs/requirements/: project-overview.md
manual-logs/samepc-2client-fps-rerun-20260514-000937/: run-client1.ps1  run-client2.ps1  run-server.ps1  run-switcher.ps1
manual-logs/samepc-2client-loop-timing-rerun-20260514-020713/: run-client1.ps1  run-client2.ps1  run-server.ps1  run-switcher.ps1
manual-logs/samepc-2client-quad-reuse-rerun-20260514-110207/: run-client1.ps1  run-client2.ps1  run-server.ps1  run-switcher.ps1
manual-logs/samepc-2client-smoke-20260513-samepc-2client-01/: run-client1.ps1  run-client2.ps1  run-server.ps1  run-switcher.ps1
manual-logs/samepc-2client-unchanged-reuse-rerun-20260514-014217/: run-client1.ps1  run-client2.ps1  run-server.ps1  run-switcher.ps1
