[workspace]
members = [
    "apps/client",
    "apps/server",
    "apps/switcher",
    "crates/protocol",
    "crates/config",
    "crates/logging",
    "crates/timebase",
    "crates/video-core",
    "crates/net-core",
    "crates/sync-core",
    "crates/ui-core",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "UNLICENSED"
publish = false
rust-version = "1.78"

[workspace.lints.rust]
unsafe_code = "forbid"
