[package]
name = "stream-sync-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
stream-sync-config = { path = "../../crates/config" }
stream-sync-logging = { path = "../../crates/logging" }
stream-sync-net-core = { path = "../../crates/net-core" }
stream-sync-protocol = { path = "../../crates/protocol" }
stream-sync-timebase = { path = "../../crates/timebase" }
socket2 = "0.5"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Pipes",
] }

[lints.rust]
unsafe_code = "allow"
