[package]
name = "stream-sync-switcher"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
stream-sync-net-core = { path = "../../crates/net-core" }
stream-sync-protocol = { path = "../../crates/protocol" }
stream-sync-server = { path = "../server" }

[lints]
workspace = true
