[package]
name = "stream-sync-switcher"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
stream-sync-net-core = { path = "../../crates/net-core" }
stream-sync-protocol = { path = "../../crates/protocol" }
stream-sync-server = { path = "../server" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
] }

[lints.rust]
unsafe_code = "allow"
