[package]
name = "stream-sync-net-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[lib]
name = "stream_sync_net_core"
path = "src/lib.rs"

[dependencies]
stream-sync-protocol = { path = "../protocol" }

[lints]
workspace = true
